Changed the style of the photo slider and fixed the publicity container's image which wasn't showing on Microsoft Edge due to the z-index being set to -1

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -279,18 +279,17 @@ h1 {
     width: 100%;
     height: 350px;
     background: white;
-    z-index: 0;
+    position: relative;
 }
 
 .publicity-container img {
     position: absolute;
     left: 50%;
-    top: 120px;
     -webkit-transform: translateX(-50%);
         -ms-transform: translateX(-50%);
             transform: translateX(-50%);
     max-width: 250px;
-    z-index: -1;
+    z-index: 1;
 }
 
 .publicity-container button {
@@ -304,6 +303,7 @@ h1 {
     border: none;
     border-radius: 0;
     font-family: 'Acme', sans-serif;
+    z-index: 2;
 }
 
 .publicity-container button:focus {
@@ -326,6 +326,7 @@ h1 {
     padding: 15px;
     background-color: rgba(208, 0, 2, .7);
     color: white;
+    z-index: 2;
 }
 
 /*------------------------------------NEWS*/
@@ -1387,11 +1388,8 @@ hr {
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~BOOTSTRAP-CAROUSEL~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 
 .glyphicon {
-    color: #cf001f;
-}
-
-.glyphicon:hover {
-    color: #F0002A;
+    font-size: 30px;
+    color: white;
 }
 
 #myCarousel {
@@ -1400,29 +1398,12 @@ hr {
 }
 
 #myCarousel .carousel-indicators {
-    bottom: -5px;
-}
-
-#myCarousel .carousel-indicators li {
-    border-color: #cf001f;
-}
-
-#myCarousel .carousel-indicators .active {
-    background-color: #cf001f;
-}
-
-#myCarousel .carousel-indicators li:hover {
-    border-color: #F0002A;
-}
-
-#myCarousel .carousel-indicators .active:hover {
-    background-color: #F0002A;
+    bottom: -25px;
 }
 
 #myCarousel .carousel-inner {
     width: 100%;
     height: 300px;
-    background: #111;
 }
 
 #myCarousel .item {
@@ -1433,6 +1414,11 @@ hr {
     bottom: 0;
     right: 0;
     margin: auto;
+}
+
+#myCarousel > .carousel-control.right,
+#myCarousel > .carousel-control.left {
+    background-image: none;
 }
 
 #myCarousel img {
@@ -1586,11 +1572,8 @@ hr {
     /*____________________________HOME-PAGE____________________________*/
 
     .publicity-container {
+        position: relative;
         width: 600px;
-    }
-
-    .publicity-container img {
-        top: 160px;
     }
 
     .publicity-container button {
@@ -1916,7 +1899,6 @@ hr {
     }
 
     .publicity-container img {
-        top: 170px;
         max-width: 450px;
     }
 
